--- a/build.xml
+++ b/build.xml
@@ -10,11 +10,11 @@
 
  
   <path id="classpath">
-    <pathelement location = "build" />
-    <pathelement location="lib/pdfbox-1.8.4.jar"/>  
-    <pathelement location="lib/junit-4.8.2.jar"/>  
-
-  </path>
+    <fileset dir="lib/">
+      <include name="*.jar"/>
+    </fileset>
+    <pathelement location="build"/>     
+  </path>  
 
   <mkdir dir="build" />
   <target name="compile" description="compiles the code">
